（22）-权限管理系统-模块导航制作

--- a/mvc/Views/Shared/_Index_Layout.cshtml
+++ b/mvc/Views/Shared/_Index_Layout.cshtml
@@ -5,8 +5,17 @@
 
     <script src="@Url.Content("~/Scripts/jquery.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/jquery.easyui.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.easyui.plus.js")" type="text/javascript"></script>
     @Styles.Render("~/Content/css")
     @Styles.Render("~/Content/themes/blue/css")
+    <script type="text/javascript">
+        function GetGuid() {
+            var s4 = function () {
+                return (((1 + Math.random()) * 0x10000) | 0).toString(16).substring(1);
+            };
+            return s4() + s4() + s4() + "-" + s4();
+        }
+    </script>
 </head>
 <body>
     <div style="padding:5px 5px 0px 5px;">
