--- a/mvc/Views/SysSample/Index.cshtml
+++ b/mvc/Views/SysSample/Index.cshtml
@@ -22,7 +22,7 @@
     <script src="@Url.Content("~/Scripts/jquery.easyui.plus.js")" type="text/javascript"></script>
     <script type="text/javascript">
 
-        //ifram 返回
+        //iframe 返回
         function frameReturnByClose() {
             $("#modalwindow").window('close');
         }
