--- a/mvc/Views/SysModule/Create.cshtml
+++ b/mvc/Views/SysModule/Create.cshtml
@@ -14,9 +14,11 @@
 <script type="text/javascript">
     $(function () {
         $("#btnSave").click(function () {
+            alert($("form").serialize());
             if ($("form").valid()) {
+                alert(form)
                 $.ajax({
-                    url: "@Url.Action("Create")",
+                url: "@Url.Action("Create")",
                 type: "Post",
                 data: $("form").serialize(),
                 dataType: "json",
