--- a/mvc/Views/Shared/_Index_Layout.cshtml
+++ b/mvc/Views/Shared/_Index_Layout.cshtml
@@ -16,6 +16,21 @@
             return s4() + s4() + s4() + "-" + s4();
         }
     </script>
+    <!--自动GRID 从第一次加载与重置窗体大小时候发生的事件:分部视图，当只有一个Grid时且ID为List-->
+    <script type="text/javascript">
+        $(function () {
+            $(window).resize(function () {
+                $('#List').datagrid('resize', {
+                    width: $(window).width() - 10,
+                    height: SetGridHeightSub(39)
+                }).datagrid('resize', {
+                    width: $(window).width() - 10,
+                    height: SetGridHeightSub(39)
+                });
+            });
+
+        });
+    </script>
 </head>
 <body>
     <div style="padding:5px 5px 0px 5px;">
