--- a/mvc/Views/SysUser/Index.cshtml
+++ b/mvc/Views/SysUser/Index.cshtml
@@ -1,29 +1,28 @@
 ﻿@using mvc.Common;
 @using mvc.Models.Sys;
-
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "主页";
     Layout = "~/Views/Shared/_Index_Layout.cshtml";
 
     List<permModel> perm = (List<permModel>)ViewBag.Perm;
-    if (perm == null)
+    if(perm==null)
     {
         perm = new List<permModel>();
     }
 }
-
 <div class="mvctool">
     <input id="txtQuery" type="text" class="searchText" />
-    @Html.ToolButton("btnQuery", "icon-search", "查询", perm, "Query", true)
+    @Html.ToolButton("btnQuery", "icon-search", "查询", perm, "Query",true)
     @Html.ToolButton("btnCreate", "icon-add", "新增", perm, "Create", true)
     @Html.ToolButton("btnEdit", "icon-edit", "编辑", perm, "Edit", true)
     @Html.ToolButton("btnDetails", "icon-details", "详细", perm, "Details", true)
     @Html.ToolButton("btnDelete", "icon-remove", "删除", perm, "Delete", true)
-    @Html.ToolButton("btnAllot", "icon-share", "分配用户", perm, "Allot", true)
-   
+    @Html.ToolButton("btnAllot", "icon-share", "分配角色", perm, "Allot", true)
 </div>
-<div id="modalwindow" class="easyui-window" data-options="modal:true,closed:true,minimizable:false,shadow:false"></div>
 <table id="List"></table>
+
+<div id="modalwindow" class="easyui-window" data-options="modal:true,closed:true,minimizable:false,shadow:false"></div>
+@Html.Partial("~/Views/Shared/_Partial_AutoGrid.cshtml")
 <script type="text/javascript">
     $(function () {
         $('#List').datagrid({
@@ -42,24 +41,26 @@
             singleSelect: true,//单选模式
             //rownumbers: true,//行号
             columns: [[
-                { field: 'Id', title: 'ID', width: 80, hidden: true },
-                { field: 'Name', title: '角色名称', width: 80, sortable: true },
-                { field: 'Description', title: '说明', width: 80, sortable: true },
-                { field: 'CreateTime', title: '创建时间', width: 80, sortable: true },
+                { field: 'Id', title: '', width: 80,hidden:true },
+                { field: 'UserName', title: '用户名', width: 80,sortable:true },
+                { field: 'TrueName', title: '真实姓名', width: 80,sortable:true },
+                { field: 'PhoneNumber', title: '手机号码', width: 80,sortable:true },
+                { field: 'State', title: '是否启用', width: 80,sortable:true },
+                { field: 'CreateTime', title: '创建时间', width: 80,sortable:true },
                 { field: 'CreatePerson', title: '创建人', width: 80, sortable: true },
                 {
-                    field: 'UserHolder', title: '属下管理员', width: 80, sortable: true, formatter: function (value) {
-                        var str = "";
-                        for (var i = 0; i < value.length; i++)
-                        {
-                            str += "[" + value[i] + "]";
+                    field: 'RoleHolder', title: '拥有角色', width: 80, sortable: true, formatter:
+                    function (value) {
+                        var role = ""
+                        for (var i = 0; i < value.length; i++) {
+                            role += "[" + value[i] + "]";
                         }
-                        return str;
+                        return role;
                     }
                 }
             ]]
         });
-     });
+    });
     //ifram 返回
     function frameReturnByClose() {
         $("#modalwindow").window('close');
@@ -79,20 +80,20 @@
             $("#modalwindow").window({ title: '导出', width: 320, height: 200, iconCls: 'icon-add' }).window('open');
         });
         $("#btnCreate").click(function () {
-            $("#modalwindow").html("<iframe width='100%' height='98%' scrolling='no' frameborder='0'' src='/SysRole/Create'></iframe>");
+            $("#modalwindow").html("<iframe width='100%' height='98%' scrolling='yes' frameborder='0'' src='/SysUser/Create'></iframe>");
             $("#modalwindow").window({ title: '新增', width: 700, height: 400, iconCls: 'icon-add' }).window('open');
         });
         $("#btnEdit").click(function () {
             var row = $('#List').datagrid('getSelected');
             if (row != null) {
-                $("#modalwindow").html("<iframe width='100%' height='99%'  frameborder='0' src='/SysRole/Edit?id=" + row.Id + "&Ieguid=" + GetGuid() + "'></iframe>");
+                $("#modalwindow").html("<iframe width='100%' height='99%'  frameborder='0' src='/SysUser/Edit?id=" + row.Id + "&Ieguid=" + GetGuid() + "'></iframe>");
                 $("#modalwindow").window({ title: '编辑', width: 700, height: 430, iconCls: 'icon-edit' }).window('open');
             } else { $.messageBox5s('提示', '@Suggestion.PlaseChooseToOperatingRecords'); }
         });
         $("#btnDetails").click(function () {
             var row = $('#List').datagrid('getSelected');
             if (row != null) {
-                $("#modalwindow").html("<iframe width='100%' height='98%' scrolling='no' frameborder='0' src='/SysRole/Details?id=" + row.Id + "&Ieguid=" + GetGuid() + "'></iframe>");
+                $("#modalwindow").html("<iframe width='100%' height='98%' scrolling='yes' frameborder='0' src='/SysUser/Details?id=" + row.Id + "&Ieguid=" + GetGuid() + "'></iframe>");
                 $("#modalwindow").window({ title: '详细', width: 500, height: 300, iconCls: 'icon-details' }).window('open');
             } else { $.messageBox5s('提示', '@Suggestion.PlaseChooseToOperatingRecords'); }
         });
@@ -112,22 +113,21 @@
                 $.messager.confirm('提示', '@Suggestion.YouWantToDeleteTheSelectedRecords', function (r) {
                     if (r) {
                         $.post("@Url.Action("Delete")?id=" + row.Id, function (data) {
-                                if (data.type == 1)
-                                    $("#List").datagrid('load');
-                                $.messageBox5s('提示', data.message);
-                            }, "json");
+                            if (data.type == 1)
+                                $("#List").datagrid('load');
+                            $.messageBox5s('提示', data.message);
+                        }, "json");
 
-                        }
+                    }
                 });
-                } else { $.messageBox5s('提示', '@Suggestion.PlaseChooseToOperatingRecords'); }
+            } else { $.messageBox5s('提示', '@Suggestion.PlaseChooseToOperatingRecords'); }
         });
         $("#btnAllot").click(function () {
-            var row = $('#List').datagrid('getSelected');
-            if (row != null) {
-                $("#modalwindow").html("<iframe width='100%' height='100%' scrolling='no' frameborder='0' src='/SysRole/GetUserByRole?roleId=" + row.Id + "&Ieguid=" + GetGuid() + "'></iframe>");
-                $("#modalwindow").window({ title: '分配用户', width: 720, height: 400, iconCls: 'icon-edit' }).window('open');
-            } else { $.messageBox5s('提示', '请选择一个需要分配用户的角色'); }
+           var row = $('#List').datagrid('getSelected');
+           if (row != null) {
+               $("#modalwindow").html("<iframe width='100%'  height='100%' scrolling='auto' frameborder='0' src='/SysUser/GetRoleByUser?userId=" + row.Id + "&Iedate=" + GetGuid() + "'></iframe>");
+               $("#modalwindow").window({ title: '分配角色', width: 720, height: 400, iconCls: 'icon-edit' }).window('open');
+           } else { $.messageBox5s('提示', '@Suggestion.PlaseChooseToOperatingRecords'); }
         });
-    });
+    })
 </script>
-@Html.Partial("~/Views/Shared/_Partial_AutoGrid.cshtml")
